[2018-10-11 09:53:09 +0200]  Added a new logging formatter that will store resources usage              karasu      {259b92bd}
[2018-10-11 09:26:40 +0200]  Working on logging resources                                               karasu      {d6e49e38}
[2018-10-10 10:55:22 +0200]  Working on resource                                                        karasu      {d558a5c0}
[2018-10-09 13:55:25 +0200]  Add reference to zfs+crypt                                                 karasu      {08d42609}